--- a/app/src/main/res/layout/activity_restaurant_details.xml
+++ b/app/src/main/res/layout/activity_restaurant_details.xml
@@ -239,7 +239,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
-                        android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <TextView
@@ -260,14 +259,21 @@
                                 android:textSize="14sp"
                                 android:text="Facility"
                                 android:textStyle="bold"
+                                android:layout_marginBottom="8dp"
                                 android:layout_marginEnd="8dp"/>
 
-                            <LinearLayout
+                            <HorizontalScrollView
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                                android:layout_height="wrap_content">
 
-                            </LinearLayout>
+                                <com.google.android.material.chip.ChipGroup
+                                    android:id="@+id/facility_collection"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal">
+
+                                </com.google.android.material.chip.ChipGroup>
+                            </HorizontalScrollView>
                         </LinearLayout>
                     </LinearLayout>
                     
@@ -308,17 +314,17 @@
                                 android:gravity="center_vertical"
                                 android:orientation="vertical">
                                 
-                                <TextView
-                                    android:layout_width="15dp"
-                                    android:layout_height="15dp"
-                                    android:background="@drawable/ic_star_black_24dp"/>
+                                <RatingBar
+                                    android:id="@+id/rating_star"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    style="?android:attr/ratingBarStyleSmall"/>
 
                                 <TextView
                                     android:id="@+id/rating_description"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Good"
-                                    android:textColor="@color/black"
                                     android:textSize="12sp"/>
 
                                 <TextView
@@ -326,7 +332,6 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="300.000"
-                                    android:textColor="@color/black"
                                     android:textSize="12sp"/>
                             </LinearLayout>
                         </LinearLayout>
