--- a/app/src/main/res/layout/custom_layout_review.xml
+++ b/app/src/main/res/layout/custom_layout_review.xml
@@ -12,18 +12,18 @@
         android:layout_marginBottom="12dp"
         android:orientation="horizontal">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
-            app:cardCornerRadius="25dp"
+            app:cardCornerRadius="20dp"
             app:cardElevation="0dp">
 
             <ImageView
                 android:id="@+id/user_photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/user_name"
@@ -39,11 +39,11 @@
         android:layout_marginBottom="8dp"
         android:orientation="horizontal">
 
-        <TextView
+        <RatingBar
             android:id="@+id/star"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:background="@drawable/ic_star_black_24dp"/>
+            style="?android:attr/ratingBarStyleSmall" />
 
         <TextView
             android:id="@+id/time"
