--- a/app/src/main/res/layout/custom_layout_review.xml
+++ b/app/src/main/res/layout/custom_layout_review.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="12dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -29,6 +32,8 @@
             android:id="@+id/user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="14sp"
             android:text="Rachmad Alif Firdaus"/>
     </LinearLayout>
 
@@ -36,12 +41,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal">
 
         <RatingBar
             android:id="@+id/star"
-            android:layout_width="15dp"
+            android:layout_width="wrap_content"
             android:layout_height="15dp"
             style="?android:attr/ratingBarStyleSmall" />
 
@@ -56,5 +63,12 @@
     <TextView
         android:id="@+id/rating_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
+        android:maxLines="3"
+        android:ellipsize="end"/>
 </LinearLayout>
